--- a/js/localization/messages/pt.json
+++ b/js/localization/messages/pt.json
@@ -398,37 +398,37 @@
         "dxFileManager-errorDefault": "Unspecified error.",
         "dxFileManager-errorDirectoryOpenFailed": "The directory cannot be opened",
 
-        "dxFileManager-commandCreate": "New directory",
-        "dxFileManager-commandRename": "Rename",
-        "dxFileManager-commandMove": "Move to",
-        "dxFileManager-commandCopy": "Copy to",
-        "dxFileManager-commandDelete": "Delete",
-        "dxFileManager-commandDownload": "Download",
-        "dxFileManager-commandUpload": "Upload files",
-        "dxFileManager-commandRefresh": "Refresh",
+        "dxFileManager-commandCreate": "Novo Diretório",
+        "dxFileManager-commandRename": "Renomear",
+        "dxFileManager-commandMove": "Mover para",
+        "dxFileManager-commandCopy": "Copiar para",
+        "dxFileManager-commandDelete": "Deletar",
+        "dxFileManager-commandDownload": "Baixar",
+        "dxFileManager-commandUpload": "Upload arquivos",
+        "dxFileManager-commandRefresh": "Atualizar",
         "dxFileManager-commandThumbnails": "Thumbnails View",
-        "dxFileManager-commandDetails": "Details View",
-        "dxFileManager-commandClearSelection": "Clear selection",
-        "dxFileManager-commandShowNavPane": "Toggle navigation pane",
+        "dxFileManager-commandDetails": "Detalhes View",
+        "dxFileManager-commandClearSelection": "Limpar sessão",
+        "dxFileManager-commandShowNavPane": "Alternar painel de navaegação",
 
-        "dxFileManager-dialogDirectoryChooserMoveTitle": "Move to",
-        "dxFileManager-dialogDirectoryChooserMoveButtonText": "Move",
-        "dxFileManager-dialogDirectoryChooserCopyTitle": "Copy to",
-        "dxFileManager-dialogDirectoryChooserCopyButtonText": "Copy",
-        "dxFileManager-dialogRenameItemTitle": "Rename",
-        "dxFileManager-dialogRenameItemButtonText": "Save",
-        "dxFileManager-dialogCreateDirectoryTitle": "New directory",
-        "dxFileManager-dialogCreateDirectoryButtonText": "Create",
-        "dxFileManager-dialogDeleteItemTitle": "Delete",
-        "dxFileManager-dialogDeleteItemButtonText": "Delete",
-        "dxFileManager-dialogDeleteItemSingleItemConfirmation": "Are you sure you want to delete {0}?",
-        "dxFileManager-dialogDeleteItemMultipleItemsConfirmation": "Are you sure you want to delete {0} items?",
-        "dxFileManager-dialogButtonCancel": "Cancel",
+        "dxFileManager-dialogDirectoryChooserMoveTitle": "Mover para",
+        "dxFileManager-dialogDirectoryChooserMoveButtonText": "Mover",
+        "dxFileManager-dialogDirectoryChooserCopyTitle": "Copiar para",
+        "dxFileManager-dialogDirectoryChooserCopyButtonText": "Copiar",
+        "dxFileManager-dialogRenameItemTitle": "Renomear",
+        "dxFileManager-dialogRenameItemButtonText": "Salvar",
+        "dxFileManager-dialogCreateDirectoryTitle": "Novo Diretório",
+        "dxFileManager-dialogCreateDirectoryButtonText": "Criar",
+        "dxFileManager-dialogDeleteItemTitle": "Deletar",
+        "dxFileManager-dialogDeleteItemButtonText": "Deletar",
+        "dxFileManager-dialogDeleteItemSingleItemConfirmation": "Tem certza que deseja deletar {0}?",
+        "dxFileManager-dialogDeleteItemMultipleItemsConfirmation": "Tem certza que deseja deletar {0} items?",
+        "dxFileManager-dialogButtonCancel": "Cancelar",
 
-        "dxFileManager-editingCreateSingleItemProcessingMessage": "Creating a directory inside {0}",
-        "dxFileManager-editingCreateSingleItemSuccessMessage": "Created a directory inside {0}",
-        "dxFileManager-editingCreateSingleItemErrorMessage": "Directory was not created",
-        "dxFileManager-editingCreateCommonErrorMessage": "Directory was not created",
+        "dxFileManager-editingCreateSingleItemProcessingMessage": "Criando um diretório dentro de {0}",
+        "dxFileManager-editingCreateSingleItemSuccessMessage": "Diretório criado dentro de {0}",
+        "dxFileManager-editingCreateSingleItemErrorMessage": "Diretório não foi criado",
+        "dxFileManager-editingCreateCommonErrorMessage": "Diretório não foi criado",
 
         "dxFileManager-editingRenameSingleItemProcessingMessage": "Renaming an item inside {0}",
         "dxFileManager-editingRenameSingleItemSuccessMessage": "Renamed an item inside {0}",
